<resources>
    <string name="app_name">study</string>
    <string name="tv">TextView</string>
    <string name="tv_1">缓缓飘落的枫叶像思念~</string>
    <string name="tv_choose">筛选</string>
    <string name="tv_2">缓缓飘落的枫叶像思念，我点燃烛火温暖岁末的秋天~</string>
    <string name="btn">Button</string>
    <string name="btn_1">按钮1</string>
    <string name="btn_2">按钮2</string>
    <string name="btn_3">按钮3</string>
    <string name="btn_4">按钮4</string>
    <string name="btn_5">按钮5</string>
    <string name="btn_6">按钮6</string>
    <string name="et">EditText</string>
    <string name="et_1">用户名</string>
    <string name="et_2">手机号</string>
    <string name="et_3">密码</string>
    <string name="et_login">登录</string>
    <string name="rb">RadioButton</string>
    <string name="rb_1">男</string>
    <string name="rb_2">女</string>
    <string name="cb">CheckBox</string>
    <string name="cb_1">你使用过哪些系统?</string>
    <string name="cb_2">Android</string>
    <string name="cb_3">IOS</string>
    <string name="cb_4">Windows</string>
    <string name="cb_5">Linux</string>
    <string name="cb_6">你喜欢?</string>
    <string name="cb_7">学习</string>
    <string name="cb_8">玩耍</string>
    <string name="iv">ImageView</string>
    <string name="lv">ListView</string>
    <string name="_2022_12_14">2022–12–14</string>
    <string name="lv_list">正在学习…</string>
    <string name="lv_time">2022–12–15</string>
    <string name="lv_content">这是内容…</string>
    <string name="gv">GridView</string>
    <string name="sv">ScrollView</string>
</resources>