<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_1"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/cb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="10dp"
        android:text="@string/cb_2"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/cb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_1"
        android:layout_marginTop="10dp"
        android:text="@string/cb_3"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/cb_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_2"
        android:layout_marginTop="10dp"
        android:text="@string/cb_4"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/cb_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_3"
        android:layout_marginTop="10dp"
        android:text="@string/cb_5"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_4"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_6"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/cb_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@drawable/bg_checkbox"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/cb_7"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/cb_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@drawable/bg_checkbox"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/cb_8"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>
</RelativeLayout>