<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:autofillHints="phone"
        android:background="@drawable/bg_et_1"
        android:hint="@string/et_2"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="username"
        android:background="@drawable/bg_et_1"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="5dp"
        android:hint="@string/et_1"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/bg_et_1"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="5dp"
        android:hint="@string/et_3"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_pressed_teal"
        android:text="@string/et_login"
        android:textColor="@color/white"
        android:textSize="25sp" />
</LinearLayout>